--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
         <div>
             <p>4️⃣If sold full collection, what is the next? 
 
-                ~ After sold full collection,  I will draw it and send them our 80% mint price ✅🔥
-                There will be Five winners 🔥
+                ~ After sold full collection,  
                <li> 1️⃣30%</li>
                <li> 2️⃣20%</li>
                 <li>3️⃣10%</li>
@@ -77,6 +76,9 @@
                 <li>5️⃣10%</li>
                 
                 <span>Last 20%,  We will used our promotional and weekly reward</span></p>
+            </br>
+I will draw it and send them our 80% mint price ✅🔥
+                There will be Five winners 🔥
         </div>
     </section> 
 
@@ -114,7 +116,7 @@
 <!-- <p> my nft servicess<button class="button">website visit now</button></p> -->
 <a href='https://xoxno.com/buy/eAliensX/eAlien?fbclid=IwAR1yw_Ee3yXNXui1qCHrDEGc3ER3EclbqFzp_P_3qQoIiV7howpv-ATQIt8'><button class="buy-now">Mint Alien</button></a>
 
-<p style="padding: 14px;font-size: 20px;color: rgb(233, 5, 5); font-family: fantasy;">After Mint Aliens 
+<p style="padding: 14px;font-size: 20px;color: rgb(233, 5, 5); font-family: fantasy; background-color:black;">After Mint Aliens 
 
     Please Contract Our TG 
     
